# explain-then-adapt

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: README.md
configs/data_generation/: README.md
configs/evaluation/: README.md  evaluation.yaml
configs/inference/: README.md  inference.yaml
configs/training/: README.md  prediction_model.yaml  reasoning_model.yaml  test_time_training.yaml
docs/: methodology.md  migration_notes.md  results.md
resources/data_generation/: README.md  base_reasoning_traces.jsonl  base_trace_repairs.jsonl  few_shot_traces.jsonl  hints.jsonl  task_manifest.jsonl
resources/training/: README.md  reasoning_validation.jsonl  reasoning_validation_augmented.jsonl
scripts/: README.md  build_inference_plan.py  build_prediction_training_data.py  build_reasoning_data.py  build_reasoning_training_data.py  evaluate.py  merge_lora_adapter.py  migrate_reasoning_resources.py  migrate_reasoning_training_resources.py  run_prediction_inference.py  sample_reasoning_model.py  summarize_compute.py  train_prediction_model.py  train_reasoning_model.py  train_ttt_adapters.py
src/explain_then_adapt/: __init__.py
tests/arc/: __init__.py  test_augmented_keys.py  test_formatting.py  test_io.py  test_transforms.py
tests/data_generation/: __init__.py  test_augmentation.py  test_backends.py  test_cli.py  test_hints.py  test_pipeline.py  test_postprocessing.py  test_prompts.py  test_records.py  test_resource_migration.py  test_resources.py  test_validation.py
tests/evaluation/: test_config.py  test_cost.py  test_parsing.py  test_scoring.py
(+63 files in other folders)
